暫時已完成1-10項flex題目

--- a/index.html
+++ b/index.html
@@ -375,9 +375,71 @@
         
         </div>
     </section>
-    <section>
+    <section id="topic10">
         <h2>10.產品列表</h2>
-        <div></div>
+        <div class="dessertAll">
+          <div class="dessert_list">
+           <div class="list_btn btn1">
+            <h3>甜點類別</h3>
+           </div>
+           <div class="list_btn btn2">
+            <h3>所有甜點(45)</h3>
+           </div>
+           <div class="list_btn btn3">
+              <h3>本日精選(10)</h3>
+           </div>
+           <div class="list_btn btn4">
+            <h3>人氣精選(26)</h3>
+           </div>
+           <div class="list_btn btn5">
+            <h3>新品上市(12)</h3>
+           </div>
+          </div>
+          <div class="dessert_produce">
+             <div class="produce">
+               <img src="10.產品列表/pic1.png" alt="">
+               <div class="dessert_text">
+                <div class="text text1">
+                  <p>焦糖甜甜圈</p>
+                </div>
+                <div class="text text2">
+                  <p>NT$ 450</p>
+                </div>
+               </div>
+               <div class="btn_plusCart">
+                <h4>加入購物車</h4>
+               </div>
+             </div>
+             <div class="produce">
+              <img src="10.產品列表/pic2.png" alt="">
+              <div class="dessert_text">
+               <div class="text text1">
+                 <p>焦糖甜甜圈</p>
+               </div>
+               <div class="text text2">
+                 <p>NT$ 450</p>
+               </div>
+              </div>
+              <div class="btn_plusCart">
+               <h4>加入購物車</h4>
+              </div>
+            </div>
+            <div class="produce">
+              <img src="10.產品列表/pic3.png" alt="">
+              <div class="dessert_text">
+               <div class="text text1">
+                 <p>焦糖甜甜圈</p>
+               </div>
+               <div class="text text2">
+                 <p>NT$ 450</p>
+               </div>
+              </div>
+              <div class="btn_plusCart">
+               <h4>加入購物車</h4>
+              </div>
+            </div>
+          </div>
+        </div>
     </section>
   </body>
 </html>
